Bug 1503157 - Make selection of font preferences respect a script subtag in the lang attribute, if present. r=m_kato